added menu state, adjustes functions

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <title> GoGoGhost </title>
     <meta name="viewport" content="initial-scale=1.0" />
 
+
     <script type="text/javascript" src="js/phaser.min.js"></script>
+  	<script type="text/javascript" src="js/game.js"></script> 
+  	<script type="text/javascript" src="js/menu.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </head>
 
   <body>
-
+<div id="phaser-canvas"></div>
   </body>
 </html>
 
